--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   "devDependencies": {
     "@aws-cdk/aws-servicecatalog-alpha": "^2.22.0-alpha.0",
     "@aws-sdk/client-ec2": "^3.159.0",
+    "@types/babel__traverse": "7.18.5",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^14.18.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "aws-cdk": "2.59.0",
+    "aws-cdk": "^2.59.0",
     "aws-sdk": "^2.1204.0",
-    "cdk-nag": "2.16.6",
+    "cdk-nag": "^2.16.6",
     "constructs": "^10.1.90",
     "eslint": "^8.23.0",
     "jest": "^27.5.1",
     "ts-node": "^9.0.0",
-    "typescript": "4.2",
-    "@types/babel__traverse": "7.18.5"
+    "typescript": "4.2"
   },
   "dependencies": {
     "amazon-s3-uri": "^0.1.1",
-    "aws-cdk-lib": "2.59.0",
+    "aws-cdk-lib": "^2.59.0",
     "constructs": "^10.0.0",
     "fs-extra": "^10.0.0",
     "prettier": "^2.7.1",
